# pyzmq

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.BSD  LICENSE.LESSER  LICENSE.md  MANIFEST.in  README.md  README.rst  SECURITY.md  Vagrantfile  appveyor.yml  buildutils.py  changelog.html  codecov.yml  detect.py  dev-requirements.txt  devices.html  eventloop.html  genindex.html  index.html  logging.html  meson.build  morethanbindings.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  pyversions.html  (+13 more)
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yaml  manylinux.yml  test-docs.yml  test.yml  wheels.yml
.obs/: workflows.yml
RELICENSE/: README.md  authors.py  chrislaws.md  ellisonbg.md  frankwiles.md  juliantaylor.md  ledgerx.md  lothiraldan.md  minrk.md  pitrou.md  takluyver.md
RELICENSE/templates/: relicense-template-bsd.txt  relicense-template-mplv2-any-osi.txt  relicense-template-mplv2.txt
_sources/: changelog.txt  devices.txt  eventloop.txt  index.txt  morethanbindings.txt  serialization.txt
_sources/api/: index.txt  zmq.green.txt  zmq.txt
_static/: default.css  searchtools.js
api/: index.html  zmq.devices.html  zmq.green.html  zmq.html
buildutils/: 4480.patch  __init__.py  _cffi.c  build_cffi.py  bundle.py  check_sys_un.c  config.py  constants.py  constants.pyx.tpl  detect.py  dummy.c  h2py.py  initlibsodium.c  initlibzmq.c  libzmq.pxd.tpl  misc.py  msg.py  patch.py  updateconstants.py  vers.c  zmq_compat.h.tpl
buildutils/include_darwin/: platform.hpp
buildutils/include_freebsd/: platform.hpp
buildutils/include_linux/: platform.hpp
buildutils/include_linux-armv/: platform.hpp
buildutils/include_linux-musl/: platform.hpp
buildutils/include_sodium/: crypto_scalarmult_curve25519.h  crypto_stream_salsa20.h  version.h
buildutils/include_sunos/: platform.hpp
buildutils/include_win32/: platform.hpp  stdint.h
buildutils/templates/: constant_enums.pxi  constants.pxi  constants.py  constants.pyi  zmq_constants.h
cmake/: FindVcvars.cmake  Findsodium.cmake
docs/: Makefile  autogen_api.py  conf.py  index.rst  make.bat  pyversions.rst  requirements.txt  unicode.rst  update_ghpages.sh
docs/_templates/: layout.html
docs/api/: index.rst
docs/source/: changelog.md  changelog.rst  conf.py  devices.rst  draft.rst  eventloop.md  eventloop.rst  index.md  index.rst  logging.rst  morethanbindings.rst  pyversions.rst  serialization.rst  ssh.rst  unicode.rst
docs/sphinxext/: apigen.py  docscrape.py  ipython_console_highlighting.py  numpydoc.py  sphinx_cython.py
examples/: LICENSE  README.md  README_PY3K
examples/asyncio/: coroutines.py  helloworld_pubsub_dealerrouter.py  router_router.py  tornado_asyncio.py
examples/bench/: benchmark.py  jsonrpc_client.py  jsonrpc_server.py  plot_latency.py  pyro_client.py  pyro_server.py  pyzmq_client.py  pyzmq_server.py  xmlrpc_client.py  xmlrpc_server.py
examples/chat/: display.py  prompt.py
examples/chat-2/: display.py
examples/crypto/: cryptotest.py
examples/cython/: README.md  cyzmq.pyx  example.py  setup.py
examples/device/: client.py  device.py  server.py
examples/docker/: LICENSE  README.md  docker-compose.yml
examples/draft/: client-server.py  install.sh  radio-dish.py
examples/eventloop/: asyncweb.py  coroutines.py  echo.py  echofuture.py  echostream.py  web.py
examples/gevent/: poll.py  reqrep.py  simple.py
examples/heartbeat/: heart.py  heartbeater.py  ping.py  pong.py  tspong.py
examples/image-processing/: README.md  log.py  main.py  requirements.txt  worker.py
examples/ioloop/: rep_server.py  server1.py
examples/kernel/: completer.py  frontend.py  kernel.py  message_spec.rst  session.py
examples/logger/: zmqlogger.py
examples/mongodb/: client.py  controller.py
examples/monitoring/: simple_monitor.py  zmq_monitor_class.py
mypy_tests/: test_context.py  test_socket.py  test_socket_async.py  test_toplevel.py
packaging/: README.md
patch/: stdint.h
perf/: Dockerfile  Makefile  collect.py  local_lat.py  local_thr.py  patch_for_2.5.py  perf.ipynb  perf.py  remote_lat.py  remote_thr.py
sources/: index.txt
static/: default.css  searchtools.js
subprojects/: .gitignore  libsodium.wrap  zeromq.wrap
subprojects/packagefiles/libsodium/: built.c  meson.build
subprojects/packagefiles/zeromq/: meson.build
tests/: conftest.py  test_asyncio.py  test_auth.py  test_cython.py  test_device.py  test_draft.py  test_ioloop.py  test_message.py  test_monitor.py  test_monqueue.py  test_mypy.py  test_proxy_steerable.py  test_security.py  test_socket.py  test_subshell.py  test_zmqstream.py  zmq_test_utils.py
tools/: backend_imports.py  check_junit_result.py  circle_wheels.py  collect_cmake.py  find_vcredist.py  install_libzmq.sh  release_windows.bat  run_with_env.cmd  showvcvars.py  tasks.py  test_sdist.py  test_wheel.py  trollius_test.sh  wheel-requirements.txt  wheel_summary.py
tox/: clean.sh  setup.py  tox.ini
zmq/: __init__.pxd  __init__.py  __init__.pyi  __init__.pyx  _asyncio_selector.py  _future.py  _future.pyi  _typing.py  _zmq.c  _zmq.pxd  _zmq.pyx  allocate.pxd  asbuffer.pxi  asyncio.py  auth.py  buffers.pxd  constants.py  decorators.py  devices.c  devices.pyx  error.py  frombuffer.pxi  ioloop.py  meson.build  versioner.pxi  web.py
zmq/backend/cffi/: __init__.py  _cdefs.h  _cffi.py  _poll.py  _verify.c  constants.py  context.py  devices.py  error.py  meson.build  message.py  socket.py  stopwatch.py  utils.py
zmq/backend/cython/: ._poll.pyx.swp  __init__.pxd  __init__.py  _cpython.pxd  _device.pyx  _externs.pxd  _mutex.pxd  _poll.pyx  _proxy_steerable.pyx  _version.pyx  _zmq.pxd  _zmq.py  checkrc.pxd  constant_enums.pxi  constants.pxi  constants.pyx  context.pxd  context.pyx  error.pyx  libzmq.pxd  meson.build  message.pxd  message.pyx  rebuffer.pyx  socket.pxd  socket.pyx  stopwatch.pxd  utils.pxd  utils.pyx
(+325 files in other folders)
